--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,4 +1,7 @@
 <%= form_for @song do |f| %>
+    
+    <%= render partial: "/partials/errors", locals: {obj: @song} %>
+
     <%= f.label :title %>
     <%= f.text_field :title %> 
 
