--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,15 @@
-<%= form_for @song do |f| %>
+<%= form_for [@genre, @song] do |f| %>
+ 
+    <%= render partial: "/partials/errors", locals: {obj: @song} %>
+
     <%= f.label :title %>
     <%= f.text_field :title %> 
 
     <%= f.label :artist %>
     <%= f.text_field :artist %> 
-    
+
+    <%= f.collection_select(:genre_id, Genre.all, :id, :title) %>
+
     <%= f.submit "Create Song!!" %> 
+
 <% end %> 
