--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@genre, @song] do |f| %>
+<%= form_for [@playlist, @song] do |f| %>
  
     <%= render partial: "/partials/errors", locals: {obj: @song} %>
 
@@ -8,7 +8,7 @@
     <%= f.label :artist %>
     <%= f.text_field :artist %> 
 
-    <%= f.collection_select(:genre_id, Genre.all, :id, :title) %>
+    <%= f.collection_select(:playlist_id, Playlist.all, :id, :title) %>
 
     <%= f.submit "Create Song!!" %> 
 
