--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Hello World</h1>
 
-<%= link_to "Create a playlist", new_playlists_path %>
+<%= link_to "Create a playlist", new_playlist_path %>
