--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@playlist, @song] do |f| %>
+<%= form_for @song do |f| %>
  
     <%= render partial: "/partials/errors", locals: {obj: @song} %>
 
