--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,5 @@
 <%= @songs.each do |song| %>
     <h1><%= song.title %></h1>
     <p><%= song.artist %></p>
+    <p><%= song.playlist_id%></p>
 <% end %>
