--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -10,6 +10,6 @@
 
     <%= f.collection_select(:playlist_id, Playlist.all, :id, :title) %>
 
-    <%= f.submit "Create Song!!" %> 
+    <%= f.submit "Create and Add Song to Playlist!!" %> 
 
 <% end %> 
