--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,5 @@
-hello my title is <%= @song.title %>
+<h1> Song Title: <%= @song.title %> </h1>
 
-artist is <%= @song.artist %>
+<h2> Song Artist is: <%= @song.artist %> </h2>
 
 <%= button_to "delete", @song, method: :delete %>
