--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,3 +3,4 @@
 <h2> Song Artist is: <%= @song.artist %> </h2>
 
 <%= button_to "delete", @song, method: :delete %>
+<%= link_to "Back_to_playlist", playlists_path %>
