--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,3 @@
 <%= @songs.each do |song| %>
-    <h1><%= song.title %></h1>
-    <p><%= song.artist %></p>
-    <p><%= song.playlist_id%></p>
+    <h1><%= song.id%>. <%= link_to song.title, song_path(song.id)%></h1>
 <% end %>
