--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <h1>Hello World</h1>
 
-<%= link_to "Create a playlist", new_playlist_path %>
+<%= link_to "Sign Up", new_playlist_path %>
+<%= link_to "Log In", %>
