--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,11 +1,14 @@
-<h1> The Playlist's Name is <%= @playlist.title %> </h1>
+<h1> The Playlist's Name is [<%= @playlist.title %>] </h1>
 
+<% if @songs.empty? %>
+    <h2> There are currently no songs in here </h2>
+<% else %>
 <%= @songs.each do |song| %>
-    <h1><%= song.id %>. <%= link_to song.title, song_path(song.id)%></h1>
+    <h2><%= link_to song.title, song_path(song.id)%></h2>
 <% end %>
-
+<% end %>
 <%= button_to "delete", @playlist, method: :delete %>
 
-<%= link_to "add a song", new_song_path(@playlist) %>
+<p><%= link_to "add a song", new_song_path(@playlist) %></p>
 
-<%= link_to "Go back to all playlists", playlists_path %>
+<p><%= link_to "Go back to all playlists", playlists_path %></p>
