--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,6 +1,6 @@
 <h1> Song Title: <%= @song.title %> </h1>
 
-<h2> Song Artist is: <%= @song.artist %> </h2>
+<h3> Song Artist is: <%= @song.artist %> </h3>
 
 <%= button_to "delete", @song, method: :delete %>
-<%= link_to "Back_to_playlist", playlists_path %>
+<%= link_to "Back_to_playlists", playlists_path %>
