--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
 <h1>Hello World</h1>
 
-<%= link_to "Sign Up", new_playlist_path %>
-<%= link_to "Log In", %>
+<%= link_to "Sign Up", new_user_path  %>
