--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for :user do |f| %>
     <p>Username: <%= f.text_field :name %></p>
+    <p>Email: <%= f.text_field :email %></p>
     <p>Password: <%= f.password_field :password %></p>
     <p>Password Confirmation: <%= f.password_field :password_confirmation %></p>
     <%= f.submit 'Submit' %>
